--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>สวัสดีค่ะ! ดิฉันนันทกานต์ ศรสถิตย์</strong> เว็บไซต์นี้จัดทำเพื่อให้ทุกคน ที่ได้เข้ามาอ่านข้อมูลของดิฉัน ได้รู้จักตัวตนของดิฉันมายิ่งขึ้น ได้เห็นถึงความสามารถ ความรู้และความเข้าใจของฉันที่มีต่อการเขียนโค้ด ออกแบบ เพื่อให้ผู้อ่านได้ทราบข้อมูลของตัวฉันมากยิ่งขึ้น ไม่ว่าจะเป็นประวัติส่วนตัว กิจกรรมต่างๆ ความชอบ ความสนใจงั้นเรามาเริ่มทำความรู้จักกันเลยดีกว่าค่ะ</p>
+										<p><strong>สวัสดีค่ะ! ดิฉันนันทกานต์ ศรสถิตย์</strong> เว็บไซต์นี้จัดทำเพื่อให้ทุกคน ที่ได้เข้ามาอ่านข้อมูลของดิฉัน ได้รู้จักตัวตนของดิฉันมากยิ่งขึ้น ได้เห็นถึงความสามารถ ความรู้และความเข้าใจของฉันที่มีต่อการเขียนโค้ด ออกแบบ เพื่อให้ผู้อ่านได้ทราบข้อมูลของตัวฉันมากยิ่งขึ้น ไม่ว่าจะเป็นประวัติส่วนตัว กิจกรรมต่างๆ ความชอบ ความสนใจ งั้นเรามาเริ่มทำความรู้จักกันเลยดีกว่าค่ะ</p>
 										<p>ความฝันของฉันก็คือ การได้เป็นโปรแกรมเมอร์ หรือนักออกแบบเว็บไซต์ต่างๆ ฉันอยากจะนำเอาความรู้ที่ฉันได้เรียนรู้ นำเอาไปประกอบอาชีพที่ฉันใฝ่ฝัน ให้ได้มีประโยชน์สูงสุด และฉันอยากจะเห็นผลงานของฉันโดดเด่นท่ามกลางคนมากมาย</p>
 									</div>
 								</div>
