--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 								</span>
 								<div class="desc">
 									<h3>Surf the internet</h3>
-									<p>ฉันชอบใช้เวลาในการดูสิ่งที่น่าสนใจในเล็กอินเตอร์เน็ต เช่น คลิปสอนทำอาหาร หรือ คลิปท่องเที่ยว</p>
+									<p>ฉันชอบใช้เวลาในการดูสิ่งที่น่าสนใจในโลกอินเตอร์เน็ต เช่น คลิปสอนทำอาหาร หรือ คลิปท่องเที่ยว</p>
 								</div>
 							</div>
 						</div>
