--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/mint.jpg);"></div>
-				<h1 id="colorlib-logo"><a href="index.html">Nantakarn Sornsatit</a></h1>
+				<h1 id="colorlib-logo"><a href="index.html">Nantakran Sronsatit</a></h1>
 				<span class="position"><a href="#">Saint Paul Convent</a> Student</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -71,7 +71,7 @@
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="work">Work</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
-						<br><br>
+						<br><br><br><br>
 					</ul>
 				</div>
 			</nav>
@@ -99,7 +99,7 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Mint</h1>
-						   					<h2>Nantakarn Sornsatit</h2>
+						   					<h2>Nantakran Sronsatit</h2>
 												
 											</div>
 					   				</div>
@@ -136,7 +136,7 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>สวัสดีค่ะ! ดิฉันนันทกานต์ ศรสถิตย์</strong> เว็บไซต์นี้จัดทำเพื่อให้ทุกคน ที่ได้เข้ามาอ่านข้อมูลของดิฉัน ได้รู้จักตัวตนของดิฉันมากยิ่งขึ้น ได้เห็นถึงความสามารถ ความรู้และความเข้าใจของฉันที่มีต่อการเขียนโค้ด ออกแบบ เพื่อให้ผู้อ่านได้ทราบข้อมูลของตัวฉันมากยิ่งขึ้น ไม่ว่าจะเป็นประวัติส่วนตัว กิจกรรมต่างๆ ความชอบ ความสนใจ งั้นเรามาเริ่มทำความรู้จักกันเลยดีกว่าค่ะ</p>
+										<p><strong>สวัสดีค่ะ! ดิฉันนันทกานต์ ศรสถิตย์</strong> เว็บไซต์นี้จัดทำเพื่อให้ทุกคน ที่ได้เข้ามาอ่านข้อมูลของดิฉัน ได้รู้จักตัวตนของดิฉันมากยิ่งขึ้น ได้เห็นถึงความสามารถ ความรู้และความเข้าใจของฉันที่มีต่อการเขียนโค้ด ออกแบบ เพื่อให้ผู้อ่านได้ทราบข้อมูลของตัวฉันมากยิ่งขึ้น ไม่ว่าจะเป็นประวัติส่วนตัว กิจกรรมต่างๆ ความชอบ ความสนใจงั้น เรามาเริ่มทำความรู้จักกันเลยดีกว่าค่ะ</p>
 										<p>ความฝันของฉันก็คือ การได้เป็นโปรแกรมเมอร์ หรือนักออกแบบเว็บไซต์ต่างๆ ฉันอยากจะนำเอาความรู้ที่ฉันได้เรียนรู้ นำเอาไปประกอบอาชีพที่ฉันใฝ่ฝัน ให้ได้มีประโยชน์สูงสุด และฉันอยากจะเห็นผลงานของฉันโดดเด่นท่ามกลางคนมากมาย</p>
 									</div>
 								</div>
@@ -219,7 +219,7 @@
 								</span>
 								<div class="desc">
 									<h3>Surf the internet</h3>
-									<p>ฉันชอบใช้เวลาในการดูสิ่งที่น่าสนใจในโลกอินเตอร์เน็ต เช่น คลิปสอนทำอาหาร หรือ คลิปท่องเที่ยว</p>
+									<p>ฉันชอบใช้เวลาในการดูสิ่งที่น่าสนใจในเล็กอินเตอร์เน็ต เช่น คลิปสอนทำอาหาร หรือ คลิปท่องเที่ยว</p>
 								</div>
 							</div>
 						</div>
