--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 			
 			<div class="colorlib-footer">
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="https://www.facebook.com/mintty.quizz" target="_blank"><i class="icon-facebook2"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UC5FljzuZnuUivlOIbGatXEw" target="_blank"><i class="icon-youtube"></i></a></li>
+					<li><a href="https://www.instagram.com/moronmint/?hl=th" target="_blank"><i class="icon-instagram"></i></a></li>
+					<li><a href="https://github.com/Moronmint" target="_blank"><i class="icon-github"></i></a></li>
 				</ul>
 			</div>
 
