--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
-										<span>Website</span>
+										<span>Graphic, Logo</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -431,7 +431,7 @@
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
-										<span>Animation</span>
+										<span>Graphic, Logo</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -446,7 +446,7 @@
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
-										<span>Illustration</span>
+										<span>Graphic, Logo</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -461,7 +461,7 @@
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
-										<span>Application</span>
+										<span>Illustration</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -476,7 +476,7 @@
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
-										<span>Graphic, Logo</span>
+										<span>Web Design</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
