--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.jpg);">
+							<div class="project" style="background-image: url(images/img-1.JPG);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
@@ -427,7 +427,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.jpg);">
+							<div class="project" style="background-image: url(images/img-2.JPG);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
@@ -442,7 +442,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.jpg);">
+							<div class="project" style="background-image: url(images/img-3.JPG);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
@@ -457,7 +457,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.jpg);">
+							<div class="project" style="background-image: url(images/img-4.JPG);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
